user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  selector:
    app: metrics
    department: skcc
  ports:
  - protocol: TCP
    port: 3006
    targetPort: 3006
