skcc-2016-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skcc-2016-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: backend-node-app2-service
          servicePort: 80
